--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,9 @@
 body {
-    color: black;
-    background-color: white;
+    background-color: black;
     overflow-x: hidden;
 }
 body.black{
-    background-color: black;
+    background-color: white;
     pointer-events:none
 }
 body.tag1 {
@@ -19,8 +18,12 @@ body.tag2 {
     line-height: 100px;
 }
 
+div, h2 {
+    color: white;
+}
+
 .pixel {
-    background-color: black;
+    background-color: white;
     height: 100px;
     width: 100px;
     border: none;
