--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
 body {
     overflow-x: hidden;
 }
+body.tag1 {
+    transition: background-color 0.25s ease-in-out;
+}
+body.tag2 {
+    transition: background-color 0.5s ease-in-out;
+}
 
 .title {
     text-align: center;
