--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,12 @@ body {
     overflow-x: hidden;
 }
 
+.mapContainer {
+    height: 600px;
+    width: 600px;
+    border-radius: 6px;
+}
+
 .title {
     text-align: center;
     line-height: 100px;
@@ -54,4 +60,11 @@ div.dark, a.dark, h2.dark, button.dark {
 }
 div.light, a.light, h2.light, button.light {
     color: black !important;
+}
+
+.mapContainer.pixel.dark {
+    background-color: var(--surface);
+}
+.mapContainer.light {
+    background-color: unset;
 }
