--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,3 +46,16 @@ body {
 div, a, h2, button {
     color: var(--onSurface) !important;
 }
+
+.pixel:nth-of-type(1) {
+    border-radius: 6px 0 0 0;
+}
+.pixel:nth-of-type(5) {
+    border-radius: 0 6px 0 0;
+}
+.pixel:nth-of-type(21) {
+    border-radius: 0 0 0 6px;
+}
+.pixel:nth-of-type(25) {
+    border-radius: 0 0 6px 0;
+}
