--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,15 +47,15 @@ div, a, h2, button {
     color: var(--onSurface) !important;
 }
 
-.pixel:nth-of-type(1) {
+.mapContainer:nth-child(1) {
     border-radius: 6px 0 0 0;
 }
-.pixel:nth-of-type(5) {
+.mapContainer:nth-child(5) {
     border-radius: 0 6px 0 0;
 }
-.pixel:nth-of-type(21) {
+.mapContainer:nth-child(27) {
     border-radius: 0 0 0 6px;
 }
-.pixel:nth-of-type(25) {
+.mapContainer:nth-child() {
     border-radius: 0 0 6px 0;
 }
