--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,13 +49,17 @@ div, a, h2, button {
 
 .mapContainer:nth-child(1) {
     border-radius: 6px 0 0 0;
+    background-color: green !important;
 }
 .mapContainer:nth-child(5) {
     border-radius: 0 6px 0 0;
+    background-color: green !important;
 }
 .mapContainer:nth-child(27) {
     border-radius: 0 0 0 6px;
+    background-color: green !important;
 }
 .mapContainer:nth-child() {
     border-radius: 0 0 6px 0;
+    background-color: green !important;
 }
