--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,19 +47,19 @@ div, a, h2, button {
     color: var(--onSurface) !important;
 }
 
-.mapContainer:nth-child(1) {
+.pixel:nth-child(1) {
     border-radius: 6px 0 0 0;
     background-color: green !important;
 }
-.mapContainer:nth-child(5) {
+.pixel:nth-child(5) {
     border-radius: 0 6px 0 0;
     background-color: green !important;
 }
-.mapContainer:nth-child(27) {
+.pixel:nth-child(21) {
     border-radius: 0 0 0 6px;
     background-color: green !important;
 }
-.mapContainer:nth-child() {
+.pixel:nth-child(25) {
     border-radius: 0 0 6px 0;
     background-color: green !important;
 }
