--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,12 @@ div, a, h2, button {
     overflow: auto;
 }
 
+.item-modal .item-wrapper {
+    margin-top: 40px;
+    background-color: var(--surface);
+    padding: 0 20px;
+}
+
 .item-modal .info-box {
     padding: 0;
     min-height: 44px;
