--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,9 @@ div, a, h2, button {
     margin-top: 40px;
     background-color: var(--surface);
     padding: 0 20px;
+    padding: 24px;
+    border-radius: 6px;
+    box-shadow: 2px 2px 4px 2px rgba(0,0,0,.14);
 }
 
 .item-modal .info-box {
