--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@ body {
 .mapContainer {
     height: 600px;
     width: 600px;
-    border-radius: 6px;
     background-color: var(--surface);
 }
 
@@ -73,6 +72,9 @@ div, a, h2, button {
     margin-top: 40px;
     background-color: var(--surface);
     padding: 0 20px;
+}
+
+.shadow {
     padding: 24px;
     border-radius: 6px;
     box-shadow: 2px 2px 4px 2px rgba(0,0,0,.14);
