--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ div, a, h2, button {
     padding: 0 20px;
 }
 
-.shadow {
+.border-shadow {
     padding: 24px;
     border-radius: 6px;
     box-shadow: 2px 2px 4px 2px rgba(0,0,0,.14);
