--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,10 @@ div, a, h2, button {
     color: var(--onPrimary);
 }
 
+.item-modal {
+    margin-top: 40px;
+    background-color: var(--surface);
+}
 .item-modal .info-content {
     padding: 10px 14px;
     display: flex;
@@ -69,8 +73,6 @@ div, a, h2, button {
 }
 
 .item-modal .item-wrapper {
-    margin-top: 40px;
-    background-color: var(--surface);
     padding: 0 20px;
 }
 
