--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,8 @@ div, a, h2, button {
 }
 
 .item-modal {
-    margin-top: 40px;
+    margin: 40px 0;
+    height: calc(100vh - 80px);
     background-color: var(--surface);
 }
 .item-modal .info-content {
