--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
     padding: 0;
     background-color: var(--onSurface);
     text-align: center;
+    line-height: 100px;
 }
 .pixel.middle {
     background-color: unset !important;
