--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,10 @@ div, a, h2, button {
     box-shadow: 2px 2px 4px 2px rgba(0,0,0,.14);
 }
 
+#infoLog span {
+    width: 100%;
+}
+
 .item-modal .info-box {
     padding: 0;
     min-height: 61px;
