--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,28 @@ body {
     background-color: var(--background);
 }
 
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: var(--surface) #00000000;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #00000000;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--surface);
+    border-radius: 10px;
+    border: 3px solid var(--separator);
+}
+
 .pixel {
     height: 100px;
     width: 100px;
