--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,9 @@ div, a, h2, button {
     max-height: 60vh;
     border-radius: 2em;
     border: double 3px var(--separator);
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
 }
 
 span.markdown-blue {
