--- a/assets/css/pixel-image.css
+++ b/assets/css/pixel-image.css
@@ -28,45 +28,45 @@
 
 /* Paths */
     /* Up */
-    .pixel.Up-East.active {
-        background-image: url('../images/Walls/Path-NE.png');
-    }
-    .pixel.Up-West.active {
-        background-image: url('../images/Walls/Path-NW.png');
-    }
     .pixel.North.active {
         background-image: unset;
     }
+    .pixel.Up-East.active {
+        background-image: url('../images/Walls/Path-NE.png') !important;
+    }
+    .pixel.Up-West.active {
+        background-image: url('../images/Walls/Path-NW.png') !important;
+    }
 
     /* Down */
-    .pixel.Down-East.active {
-        background-image: url('../images/Walls/Path-SE.png');
-    }
-    .pixel.Down-West.active {
-        background-image: url('../images/Walls/Path-SW.png');
-    }
     .pixel.South.active {
         background-image: unset;
     }
+    .pixel.Down-East.active {
+        background-image: url('../images/Walls/Path-SE.png') !important;
+    }
+    .pixel.Down-West.active {
+        background-image: url('../images/Walls/Path-SW.png') !important;
+    }
 
     /* Left */
-    .pixel.Left-North.active {
-        background-image: url('../images/Walls/Path-NW.png');
-    }
-    .pixel.Left-South.active {
-        background-image: url('../images/Walls/Path-SW.png');
-    }
     .pixel.West.active {
         background-image: unset;
     }
+    .pixel.Left-North.active {
+        background-image: url('../images/Walls/Path-NW.png') !important;
+    }
+    .pixel.Left-South.active {
+        background-image: url('../images/Walls/Path-SW.png') !important;
+    }
     
     /* Right */
-    .pixel.Right-North.active {
-        background-image: url('../images/Walls/Path-NE.png');
-    }
-    .pixel.Right-South.active {
-        background-image: url('../images/Walls/Path-SE.png');
-    }
     .pixel.East.active {
         background-image: unset;
+    }
+    .pixel.Right-North.active {
+        background-image: url('../images/Walls/Path-NE.png') !important;
+    }
+    .pixel.Right-South.active {
+        background-image: url('../images/Walls/Path-SE.png') !important;
     }
