--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,7 @@ div, a, h2, button {
 .info-value {
     display: flex;
     flex-wrap: wrap;
+    margin: auto;
 }
 
 /* █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ */
