--- a/assets/css/pixel-image.css
+++ b/assets/css/pixel-image.css
@@ -1,3 +1,8 @@
+/* Cursor */
+.pixel {
+    cursor: default;
+}
+
 /* Middle */
 .pixel.middle {
     background-image: url('../images/Floor/Tile.png');
