--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,13 +136,15 @@ div, a, h2, button {
     display: flex;
     flex-direction: column;
     overflow: auto;
-    max-height: 102px;
+    max-height: 130px;
 }
 .info-value {
     display: flex;
     flex-wrap: wrap;
     margin: auto;
+    height: 100%;
 }
+
 
 /* █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ */
 /*  Item Buttons █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ */
@@ -150,22 +152,12 @@ div, a, h2, button {
 .inventory-item, .equipped-item, .action-button, .close-log-button {
     padding: 8px;
     margin: 0.5em;
-    min-width: 100px;
     align-items: center;
     font-size: 10px;
     border-radius: 0.25rem!important;
     border-width: 0;
     text-transform: uppercase;
     justify-content: center;
-}
-.inventory-item.Armour, .equipped-item.Armour {
-    background-color: var(--green);
-}
-.inventory-item.Weapon, .equipped-item.Weapon {
-    background-color: var(--red);
-}
-.inventory-item.Potion, .inventory-item.Poison {
-    background-color: var(--purple);
 }
 .action-button, .close-log-button {
     background-color: crimson;
@@ -250,14 +242,17 @@ div, a, h2, button {
     overflow-y: auto;
 }
 
+pre {
+    color: var(--onSurface);
+}
 span.markdown-red {
-    color: var(--bs-pink);
+    color: var(--pink);
 }
 span.markdown-blue {
-    color: var(--bs-blue);
+    color: var(--blue);
 }
 span.markdown-green {
-    color: var(--bs-teal);
+    color: var(--teal);
 }
 span.markdown-italics {
     font-style: italic;
@@ -268,8 +263,7 @@ span.markdown-italics {
 
 .button-section {
     margin: 0.5em;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
     justify-items: center;
     gap: 1em;
     font-size: 10px;
@@ -278,4 +272,85 @@ span.markdown-italics {
 .button-section > button {
     width: 100%;
     margin: 0;
+}
+
+
+
+aside {
+    position: absolute;
+    z-index: 10;
+    width: calc( var(--c-Pixel) * 2px );
+    background-color: var(--primary);
+    left: calc( 0px - ( var(--c-Pixel) * 2px ) );
+
+    transition: left 500ms;
+}
+aside[active = true] {
+    left: 0;
+}
+
+aside > #aside-toggle {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 2vw;
+    height: 2vw;
+    padding: 0.1rem;
+}
+
+aside > #aside-toggle > svg {
+    fill: var(--onPrimary);
+    transform: rotate(90deg);
+    transition: transform 500ms;
+}
+aside[active = true] > #aside-toggle > svg {
+    transform: rotate(-90deg);
+}
+
+
+
+main {
+    transition: filter 500ms;
+}
+body:has(aside[active = true]) > main {
+    filter: blur(4px);
+    pointer-events: none;
+    user-select: none;
+}
+
+
+.upload-box {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.file-upload,
+.file-download > span {
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #fff;
+    font-size: 14px;
+    padding: 10px 12px;
+    background-color: var(--primaryVariant);
+    width: 100%;
+    justify-content: center;
+}
+
+.file-upload svg,
+.file-download > span svg {
+    height: 16px;
+    margin-right: 4px;
+    fill: var(--onPrimary);
+}
+
+.file-input, .file-download {
+    width: 100%;
 }
